--- a/SynergySolution/SynergySolution/Views/Shared/_Layout.cshtml
+++ b/SynergySolution/SynergySolution/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <img src="~/Content/Images/Standard-Bank-logo.png" class="logo" id="logoImage" alt="Logo" />
-                @Html.ActionLink("Standard Bank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Standard Bank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand unselect" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
