--- a/SynergySolution/SynergySolution/Content/bootstrap.css
+++ b/SynergySolution/SynergySolution/Content/bootstrap.css
@@ -4369,11 +4369,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
+  cursor: default;
 }
 
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand {
-    margin-left: -15px;
+    margin-left: -60px;
+    cursor: pointer;
   }
 }
 
