--- a/SynergySolution/SynergySolution/Views/Home/Index.cshtml
+++ b/SynergySolution/SynergySolution/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                     {
                         <div class="jumbotron">
                             
-                            <h3 class="text-center mainHead">SYNERGY SOLUTION</h3>
+                            <h3 class="text-center">SYNERGY SOLUTION</h3>
                             <h3 class="text-center">LOGIN</h3>
                             <hr class="lineShort" align="center" />
 
