--- a/SynergySolution/SynergySolution/Views/Shared/_Layout.cshtml
+++ b/SynergySolution/SynergySolution/Views/Shared/_Layout.cshtml
@@ -6,6 +6,17 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style>
+    .footer {
+    background: none repeat scroll 0 0 white;
+    border-top: 1px solid #e7eaec;
+    bottom: 0;
+    left: 0;
+    padding: 10px 20px;
+    position: absolute;
+    right: 0;
+    }
+        </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,8 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="~/Content/Images/Standard-Bank-logo.png" class="logo" id="logoImage" alt="Logo" />
-                @Html.ActionLink("Standard Bank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand unselect" })
+                @Html.ActionLink("Standard Bank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -31,9 +41,11 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - SD Savages</p>
-        </footer>
+        <div class="footer">
+           
+                <p>&copy; @DateTime.Now.Year - SD Savages</p>
+       
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
